# xmodits-cli

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build_cli_artifacts.yml  ci.yml  release.yml
src/: api.rs  cli.rs  main.rs
