[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
description = "XMODITS command line application"
version = "0.11.0"
edition = "2021"
license = "LGPLv3"
repository = "https://github.com/B0ney/xmodits-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.xmodits-lib]
git = "https://github.com/B0ney/xmodits-lib.git"
rev = "b72ca08"

[dependencies]
clap = { version = "4.3.11", features = ["derive", "cargo", "wrap_help"] }
rayon = { version = "1.7.0", optional = true }
wild = "2.1.0"

[target.'cfg(windows)'.dependencies]
shellexpand = "3.0"

[features]
with_metadata = ["built"]

[build-dependencies]
built = { version = "0.6.1", features = ["chrono", "git2"], optional = true }

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
lto = true
