[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
description = "XMODITS command line application"
version = "0.11.3"
edition = "2021"
license = "LGPLv3"
repository = "https://github.com/B0ney/xmodits-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.xmodits-lib]
git = "https://github.com/B0ney/xmodits-lib.git"
rev = "ce5d922"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
rayon = { version = "1", optional = true }
wild = "2"

[target.'cfg(windows)'.dependencies]
shellexpand = "3"

[features]
with_metadata = ["built"]

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"], optional = true }

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
panic = "abort"
lto = true
